--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,11 @@
-.App {
+.App{
+  margin: 0px;
+  padding: 100px;
+   box-sizing: border-box ;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  
+  border: 5px solid red;
+  width :auto;
+  justify-content: space-around;
+  background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
